<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/drawer_time_table"
        android:title="@string/title_time_table"
        android:icon="@drawable/ic_action_calendar_month"/>
    <item android:id="@+id/drawer_my_schedule"
        android:title="@string/title_my_schedule"
        android:icon="@drawable/ic_stars_black_18dp"/>
    <item android:id="@+id/drawer_conference"
        android:title="@string/title_conference"
        android:icon="@drawable/icon_conference"/>
    <item android:id="@+id/drawer_bazaar"
        android:title="@string/title_bazaar"
        android:icon="@drawable/icon_bazaar"/>
    <item android:id="@+id/drawer_session"
        android:title="@string/title_session"
        android:icon="@drawable/ic_action_group"/>
    <item android:id="@+id/youtube_live"
        android:title="@string/title_youtube"
        android:icon="@drawable/ic_action_play"/>
    <item android:id="@+id/drawer_official"
        android:title="@string/title_official_site"
        android:icon="@drawable/ic_action_android"/>
    <item android:id="@+id/drawer_about"
        android:title="@string/title_about"
        android:icon="@drawable/ic_action_about"/>
</menu>